version 1.5.0 (not yet released)     
=====================================
 * clean-up deprecated calendar specific subclasses (PR #231).
 * added string formatting support to `cftime.datetime` objects
   (via `cftime.datetime.__format__`) PR #232.
 * add support for astronomical year numbering (including year zero) for
   'real-world' calendars through 'has_year_zero' cftime.datetime kwarg.
   Default is False to maintain backward compatibility, ignored for
   idealized calendars like '360_day' (they always have year zero). PR #234.

version 1.4.1 (release tag v1.4.1.rel)
======================================
 * Restore use of calendar-specific sub-classes in `cftime.num2date`,
   `cftime.datetime.__add__`, and `cftime.datetime.__sub__`.  The use of them 
   will be removed in a later release.
 * add 'fromordinal' static method to create a cftime.datetime instance
   from a julian day ordinal and calendar (inverse of 'toordinal').

version 1.4.0 (release tag v1.4.0.rel)
======================================
 * `cftime.date2num` will now always return an array of integers, if the units
   and times allow.  Previously this would only be true if the units were
   'microseconds' (PR #225).  In other circumstances, as before, `cftime.date2num`
   will return an array of floats.
 * Rewrite of julian day/calendar functions (_IntJulianDayToCalendar and 
   _IntJulianDayFromCalendar) to remove GPL'ed code.  cftime license
   changed to MIT (to be consistent with netcdf4-python). 
 * Added datetime.toordinal() (returns julian day, kwarg 'fractional'
   can be used to include fractional day).
 * cftime.datetime no longer uses calendar-specific sub-classes.

version 1.3.1 (release tag v1.3.1rel)
=====================================
 * fix for issue #211 (PR #212) bug in masked array handling in date2num)
 * switch from travis/appveyor to github actions for CI/CD (PR #215).
 * switch to cython language_level=3 (no more support for python 2) (PR #217).