@@ -4,9 +4,16 @@ version 1.5.0 (not yet released)
  * added string formatting support to `cftime.datetime` objects
    (via `cftime.datetime.__format__`) PR #232.
  * add support for astronomical year numbering (including year zero) for
-   'real-world' calendars through 'has_year_zero' cftime.datetime kwarg.
-   Default is False to maintain backward compatibility, ignored for
-   idealized calendars like '360_day' (they always have year zero). PR #234.
+   real-world calendars using 'has_year_zero' cftime.datetime kwarg (PR #234).
+   Default is False for 'julian','gregorian'/'standard', but True 
+   for 'proleptic_gregorian' (since ISO 8601 has a year zero).
+   The calendar-specific defaults conform to the proposed updated CF standard
+   (https://github.com/cf-convention/cf-conventions/issues/298).
+   Ignored for idealized calendars like '360_day'
+   (they always have year zero). Strictly speaking, CF
+   does not allow for dates before 1-1-1 in the 'julian'
+   or 'gregorian'/'standard' calendars, but cftime will handle dates
+   before this without raising an exception or issuing a warning.
 
 version 1.4.1 (release tag v1.4.1.rel)
 ======================================
